--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCyexIc7mxdzwsWb0IWnyvTewD65Iv6qvg"/>
+            android:value="@string/google_maps_api_key" />
 
         <activity
             android:name=".MainActivity"
