--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_api_key" />
 
+        <activity android:name=".NotificationsActivity" />
+        <activity android:name=".SettingsActivity" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
